--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -137,7 +137,7 @@ figure img{
   width: 300px;
 }
 .button-contact {
-  width:80%;
+  width:450px;
   margin: 0 auto;
 }
 .button-contact input {
@@ -151,6 +151,12 @@ figure img{
 .car-details h4{
   margin: 17px 0 26px 0;
 }
+.car-details{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .bg-success {
   margin: 50px 0;
   color:white;
@@ -218,4 +224,8 @@ figure img{
   p{
     margin: 10px 0;
   }
+}
+#myMap.map-details{
+  width:540px;
+  height: 200px;
 }
