--- a/views/about-us.hbs
+++ b/views/about-us.hbs
@@ -12,5 +12,5 @@
 
         </div>
     </div>
-    <a href="/" class="btn btn-dark">Volver</a>
+    <a href="/" class="btn btn-secondary">Volver</a>
 </div>
