--- a/views/contact-us.hbs
+++ b/views/contact-us.hbs
@@ -16,7 +16,8 @@
     <label for="mensaje">Mensaje:</label>
     <textarea name="message" class="form-control" id="mensaje" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-secondary btn-lg">Enviar mensaje</button>
+  <button type="submit" class="btn btn-success btn-lg">Enviar mensaje</button>
 </form>
-
-<a href="/" class="btn btn-dark">Inicio</a>
+<div class="contact-us">
+  <a  href="/" class="btn btn-dark">Inicio</a>
+</div>
