--- a/views/cars/cars-detail.hbs
+++ b/views/cars/cars-detail.hbs
@@ -14,57 +14,58 @@
     </div>
 
     <div class="col-md-6 car-details">
-            <div>
-                <h4>Descripción</h4>
-                <p>{{description}}</p>
-                <p><strong>Kilometros: </strong> {{kilometres}} Km | <strong> Precio: </strong> {{price}} &#8364;</p>
-                <p>Matricula: {{plate}} | Estado del coche: {{state}}</p>
-                <h4>Ubicacion</h4>
-                <p>{{location}}</p>
+        <div>
+            <h4>Descripción</h4>
+            <p>{{description}}</p>
+            <p><strong>Kilometros: </strong> {{kilometres}} Km | <strong> Precio: </strong> {{price}} &#8364;</p>
+            <p>Matricula: {{plate}} | Estado del coche: {{state}}</p>
+            <h4>Ubicacion</h4>
+            <p>{{location}}</p>
 
-                <hr>
+            <h3 class="adStatus">{{adStatus}}</h3>
 
-            </div>
-            <div class="col-md-4">
-                <h5>El anunciante: </h5>
-                <p><strong>Nombre</strong> {{creatorId.username}}</p>
-                <p><strong>Telefono</strong> {{creatorId.phoneNumber}}</p>
-            </div>
-            <div class="col-md-8">
-                <div class="form-row">
-                    <form action="/cars/contact" method="POST" class="needs-validation" novalidate>
-                        <div class="form-group mb-2">
-                            <label for="mail" class="sr-only">Email del propietario</label>
-                            <input name="email" type="text" readonly class="form-control-plaintext" id="mail"
-                                value="{{creatorId.email}}">
-                        </div>
-                        <div class="form-group mb-2">
-                            <label for="mailInteresado">Tu email de contacto</label>
-                            <input name="buyerEmail" type="text" class="form-control" id="mailInteresado"
-                                placeholder="Ingrese su email" required>
-                            <div class="invalid-feedback">
-                                Es necesario tu email para mandarte una copia!
-                            </div>
-                        </div>
-                        <div class="form-group mb-2">
-                            <label for="mensaje">Mensaje:</label>
-                            <textarea name="message" class="form-control" id="mensaje" rows="3" required></textarea>
-                            <div class="invalid-feedback">
-                                Que quieres comunicarle al propietario!
-                            </div>
-                        </div>
-                        <button class="btn btn-success button-contact" type="submit">
-                            <label for="asunto" class="sr-only">Asunto</label>
-                            <input name="subject" type="text" readonly class="form-control-plaintext" id="asunto"
-                                value="Estoy interesado en su {{brand}}">
-                        </button>
-                    </form>
+            <hr>
+
+        </div>
+        <div>
+            <h5>El anunciante: </h5>
+            <p><strong>Nombre</strong> {{creatorId.username}}</p>
+            <p><strong>Telefono</strong> {{creatorId.phoneNumber}}</p>
+        </div>
+
+        <div class="form-row">
+            <form action="/cars/contact" method="POST" class="needs-validation" novalidate>
+                <div class="form-group mb-2">
+                    <label for="mail" class="sr-only">Email del propietario</label>
+                    <input name="email" type="text" readonly class="form-control-plaintext" id="mail"
+                        value="{{creatorId.email}}">
                 </div>
-            </div>
+                <div class="form-group mb-2">
+                    <label for="mailInteresado">Tu email de contacto</label>
+                    <input name="buyerEmail" type="text" class="form-control" id="mailInteresado"
+                        placeholder="Ingrese su email" required>
+                    <div class="invalid-feedback">
+                        Es necesario tu email para mandarte una copia!
+                    </div>
+                </div>
+                <div class="form-group mb-2">
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea name="message" class="form-control" id="mensaje" rows="3" required></textarea>
+                    <div class="invalid-feedback">
+                        Que quieres comunicarle al propietario!
+                    </div>
+                </div>
+                <button class="btn btn-success button-contact" type="submit">
+                    <label for="asunto" class="sr-only">Asunto</label>
+                    <input name="subject" type="text" readonly class="form-control-plaintext" id="asunto"
+                        value="Estoy interesado en su {{brand}}">
+                </button>
+            </form>
+        </div>
     </div>
 </div>
 
-    <p id="carId" style="display:none">{{_id}}</p>
+<p id="carId" style="display:none">{{_id}}</p>
 
 
 <script>
