--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg">
 
     <a class="navbar-brand" href="/">{{pageName}}</a>
 
