--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 profile-info">
 
             <h1>Bienvenido, {{users.username}}! </h1>
 
@@ -17,13 +17,17 @@
         <div class="col-md-6">
             <h1>Mis coches</h1>
             {{#each cars}}
+            <div class="car-collection">
                 <a href="/cars/{{_id}}/details">
                     <img class="profile-car-img" src="{{carImagePath}}" alt="{{users.username}}">
                 </a>
-                <a class="btn btn-info" href="/cars/{{_id}}/edit">Editar</a>
-                <form action="/cars/{{_id}}/delete" method="POST">
-                    <button class="btn btn-danger" type="submit">Borrar</a>
-                </form>
+                <div class="profile-button">
+                    <a class="btn btn-info" href="/cars/{{_id}}/edit">Editar</a>
+                    <form action="/cars/{{_id}}/delete" method="POST">
+                        <button class="btn btn-danger" type="submit">Borrar</a>
+                    </form>
+                </div>
+            </div>
             {{/each}}
         </div>
     </div>
