--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -9,10 +9,14 @@ h1, h2, h3 {
 
 .navbar {
   margin-bottom: 70px;
-  background-color:#ddd;
+  background: linear-gradient(45deg, #f44336 0%, #f44336 23%, rgba(0, 0, 0, 1) 23%, rgba(0, 0, 0, 1) 100%);
   .nav-link{
     font-weight: 400;
-    color: #ef5350;
+    color: #f44336;
+    transition: .2s all;
+    &:hover{
+      color:white;
+    }
   }
   .navbar-brand{
     color: black;
