last daily commit

--- a/views/email-sent.hbs
+++ b/views/email-sent.hbs
@@ -8,6 +8,7 @@
         <li>Mensaje: {{message}}</li>
         <li>Info del mensaje: {{info.response}}</li>
         <li>ID {{info.messageId}}</li>
+        <li>Se ha mandado una copia de tu mensaje al correo {{buyerEmail}}</li>
     </ul>
 
     <a href="/" class="btn btn-dark">Inicio</a>
