--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,7 +86,8 @@ figure img {
 .carousel-item img {
   height: 100%;
   width: 100%;
-  object-fit: contain; }
+  object-fit: cover;
+  object-position: bottom; }
 
 .about-us {
   display: flex;
