--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -18,7 +18,7 @@
                 <input name="email" type="email" class="form-control" id="field3">
             </div>
 
-            <button type="submit" class="btn btn-dark btn-block btn-lg">Registrarme</button>
+            <button type="submit" class="btn btn-success btn-block">Registrarme</button>
 
             {{#if errorMsg}}
             <div id="errorMsg">{{{errorMsg}}}</div>
