--- a/views/contact-us.hbs
+++ b/views/contact-us.hbs
@@ -16,5 +16,5 @@
     <label for="mensaje">Mensaje:</label>
     <textarea name="message" class="form-control" id="mensaje" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-success btn-lg">Enviar mensaje</button>
+  <button type="submit" class="btn btn-success">Enviar mensaje</button>
 </form>
