--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -103,7 +103,8 @@ figure img{
 .carousel-item img {
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  object-position: bottom;
 }
 .about-us{
   display: flex;
