--- a/views/auth/confirmation.hbs
+++ b/views/auth/confirmation.hbs
@@ -7,4 +7,4 @@
 <h6>Email: {{updatedUser.email}}</h6> 
 
 
-<a href="/" class="btn btn-dark">Inicio</a>
+<a href="/" class="btn btn-secondary">Inicio</a>
