--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -13,7 +13,7 @@
                 <input name="password" type="password" class="form-control" id="field2">
             </div>
 
-            <button type="submit" class="btn btn-dark btn-block btn-lg">Iniciar sesión</button>
+            <button type="submit" class="btn btn-success btn-block">Iniciar sesión</button>
 
             {{#if errorMsg}}
             <div id="errorMsg">{{{errorMsg}}}</div>
