--- a/views/forum/forum-list.hbs
+++ b/views/forum/forum-list.hbs
@@ -1,5 +1,5 @@
 <h1>Foro</h1>
-<a href="/forum/create" class=" btn btn-dark">Crear Post</a>
+<a href="/forum/create" class=" btn btn-success">Crear Post</a>
 
 <div class="container">
     <div class="row">
