--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
       <img src="/images/Banner03.jpeg" class="d-block w-100" alt="Foto coche">
     </div>
     <div class="carousel-item">
-      <img src="/images/Banner04.png" class="d-block w-100" alt="Foto coche">
+      <img src="/images/Banner04.jpg" class="d-block w-100" alt="Foto coche">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -27,6 +27,8 @@
   </a>
 </div>
 
+
+<h1>Coches</h1>
 <div class="container">
     <div class="row justify-content-center">
         {{#each cars}}
@@ -41,6 +43,7 @@
 </div>
 <hr>
 
+<h1>Foro</h1>
 <div class="container">
     <div class="row justify-content-center">
         {{#each posts}}
