--- a/views/cars/cars-edit.hbs
+++ b/views/cars/cars-edit.hbs
@@ -76,7 +76,7 @@
                 </div>
                 <div class="form-group">
                     <label for="direction">Location</label>
-                    <input name="location" type="text" class="form-control" id="direction" value="{{this.location}}">
+                    <input name="location" type="text" class="form-control" id="direction" value="{{carToEdit.location}}">
                 </div>
 
                 <button type="submit" class="btn btn-success">Modificar anuncio</button>
