add styles to buttons

--- a/views/forum/forum-edit.hbs
+++ b/views/forum/forum-edit.hbs
@@ -21,8 +21,8 @@
           <label for="img-input">Imágen</label>
           <input name="paco" type="file" class="form-control" id="img-input" value="{{postPicPath}}" required>
         </div>
-        <button type="submit" class="btn btn-dark">Guardar edición</button>
-        <a href="/forum" class="btn btn-dark">Volver</a>
+        <button type="submit" class="btn btn-success">Guardar edición</button>
+        <a href="/forum" class="btn btn-secondary">Volver</a>
     </div>
 
 
