--- a/views/profile/profile-edit.hbs
+++ b/views/profile/profile-edit.hbs
@@ -32,9 +32,9 @@
           <label for="phone-input">Número de teléfono</label>
           <input name="phoneNumber" type="tel" class="form-control" id="phone-input" value="{{editUser.phoneNumber}}">
         </div>
-         <button type="submit" class="btn btn-dark">Guardar edición</button>
-        <a href="/profile" class="btn btn-dark">Volver</a>
-        <a href="/profile/delete/{{editUser._id}}" class="btn btn-dark">Eliminar</a>
+         <button type="submit" class="btn btn-success">Guardar edición</button>
+        <a href="/profile" class="btn btn-secondary">Volver</a>
+        <a href="/profile/delete/{{editUser._id}}" class="btn btn-danger">Eliminar</a>
 
       </form>
     </div>
