--- a/views/forum/forum-list.hbs
+++ b/views/forum/forum-list.hbs
@@ -2,7 +2,7 @@
 <a href="/forum/create" class=" btn btn-success">Crear Post</a>
 
 <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
             {{#each allPost}}
                 <div class="col-md-3 card forum-list">
                         <div>
